// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildSpeechResponse returns a valid Alexa response 1`] = `
Object {
  "response": Object {
    "outputSpeech": Object {
      "text": "Hello!",
      "type": "PlainText",
    },
    "shouldEndSession": true,
  },
  "version": "1.0",
}
`;

exports[`buildSpeechResponse setting shouldEndSession returns a valid Alexa response 1`] = `
Object {
  "response": Object {
    "outputSpeech": Object {
      "text": "Hello!",
      "type": "PlainText",
    },
    "shouldEndSession": false,
  },
  "version": "1.0",
}
`;
